--- a/app/src/main/res/layout/list_me.xml
+++ b/app/src/main/res/layout/list_me.xml
@@ -28,6 +28,7 @@
         android:layout_alignParentRight="true"/>
 
     <ImageView
+        android:id="@+id/image_map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
