--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/brithMe"
@@ -11,7 +10,7 @@
         android:id="@+id/image"
         android:layout_width="44dp"
         android:layout_height="44dp"
-        android:src="@drawable/ptsimbol"/>
+        android:src="@drawable/ptsimbol" />
 
 <RelativeLayout android:id="@+id/text_container"
     android:layout_width="match_parent"
@@ -19,6 +18,7 @@
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
+    android:layout_alignParentEnd="true"
     android:layout_toRightOf="@id/image"
     android:orientation="vertical"
     android:paddingLeft="16dp"
@@ -35,6 +35,8 @@
         android:text="The city hall"
         android:textColor="@color/myText"
         android:textStyle="bold"
+        android:background="@drawable/text_color"
+        android:clickable="true"
         android:textSize="25sp"/>
 
     <TextView
@@ -45,7 +47,9 @@
         android:layout_below="@id/city_hall"
         android:textColor="@color/myText"
         android:textStyle="bold"
-        android:textSize="25sp"/>
+        android:textSize="25sp"
+        android:background="@drawable/text_color"
+        android:clickable="true"/>
 
     <TextView
         android:id="@+id/diffrent"
@@ -57,7 +61,9 @@
         android:textColorLink="#FFFFFF"
         android:textColor="@color/myText"
         android:textStyle="bold"
-        android:textSize="25sp"/>
+        android:textSize="25sp"
+        android:background="@drawable/text_color"
+        android:clickable="true"/>
 
 </RelativeLayout>
 </RelativeLayout>
